//
// Copyright 2018, TeamDev. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package spine.test.command.event;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package="io.spine.test.command.event";
option java_outer_classname = "CommandEventsProto";
option java_multiple_files = true;

import "spine/core/user_id.proto";
import "spine/test/command/project.proto";

message CmdProjectCreated {
    ProjectId project_id = 1;

    // If true a command for adding a first task will be created.
    // See `CommandReactionMethodTest.java`
    bool initialize = 2;
}

message CmdTaskAdded {
    ProjectId project_id = 1;
    Task task = 2;
}

message CmdTaskRemoved {
    ProjectId project_id = 1;
    Task task = 2;
}

message CmdTaskAssigned {
    TaskId task_id = 1;
    core.UserId assignee = 2;
}

message CmdTaskStarted {
    TaskId task_id = 1;
}

message CmdProjectStarted {
    ProjectId project_id = 1;
}

message MandatoryFieldEvent {
    ProjectId project_id = 1 [(required) = true];
}

// An event emitted when a project is created for duplicate command tests.
//
message DCmdProjectCreated {
    ProjectId project_id = 1;
}
